<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/splash_bg"
    android:id="@+id/activity_login"
    android:layout_height="match_parent"
    tools:context=".view.activity.login.LoginActivity">
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/splash_logo"

    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:id="@+id/layoutContainer">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            android:id="@+id/editTextEmail"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext"/>
        <EditText
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="numberPassword"
            android:padding="10dp"
            android:gravity="center"
            android:id="@+id/editNumPass"
            android:background="@drawable/edittext"
            android:layout_below="@+id/editTextEmail" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editNumPass"
            android:id="@+id/buttonlayoutContainer"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">
            <TextView
                android:layout_width="match_parent"
                android:textColor="@color/colorAccent"
                android:layout_weight="1"
                android:textSize="14dp"
                android:textStyle="bold"
                android:id="@+id/forgotPass"
                android:onClick="onForgotPasswordClick"
                android:text="@string/forgot_password"
                android:gravity="left"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:layout_weight="1"
                android:textSize="14dp"
                android:gravity="right"
                android:text="@string/click_here"
                android:textStyle="bold"/>
        </LinearLayout>



        <Button
            android:onClick="onLoginClick"
            android:layout_marginTop="30dp"
            android:layout_below="@id/buttonlayoutContainer"
            android:id="@+id/buttonLogin"
            android:gravity="center"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:background="@drawable/button"
            android:text="@string/signinnow"
            android:textStyle="bold"
            android:layout_height="wrap_content" />



        <TextView
android:onClick="onRegisterClick"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:id="@+id/textViewRegister"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_below="@+id/buttonLogin"
            android:textSize="15dp"
            android:layout_marginTop="20dp"
            android:text="don_t_have_an_account_please_register"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</RelativeLayout>
